Apply .gitignore